[url-shortener-netty-application] Enhance exception handling in the `main` and use System.exit() to exit with appropriate code